--- a/url_shortner/index.html
+++ b/url_shortner/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="icon" href="./public/icons/icon16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>URL Shortner : A simple tool to shorten your URL.</title>
   </head>
   <body>
     <div id="root"></div>
